--- a/dev/contacts.html
+++ b/dev/contacts.html
@@ -1,3 +1,19 @@
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <title>Энерго-Блок | Орша</title>
+  <link rel="shortcut icon" href="assets/img/favicons/chel.svg" type="image/svg">
+  <link rel="stylesheet" href="assets/css/style.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+
+
+</head>
+
+
+<body>
 <header class="header">
     <div class="container">
         <div class="header__wrapper">
@@ -44,3 +60,39 @@
     </div>
 
 </header>
+
+<main class="main">
+
+
+</main>
+
+<footer class="contacts-footer">
+    <div class="container">
+        <div class="contacts-footer__inner">
+            <div class="contacts-footer__image">
+                <img src="assets/img/logo-footer2.svg" alt="img">
+            </div>
+            <ul class="contacts-footer__list">
+                <li class="contacts-footer__item">
+                    <a href="main.html" class="contacts-footer__link">Главная</a>
+                </li>
+                <li class="contacts-footer__item">
+                    <a href="blog.html" class="contacts-footer__link">Блог</a>
+                </li>
+                <li class="contacts-footer__item">
+                    <a href="job.html" class="contacts-footer__link">Вакансии</a>
+                </li>
+            </ul>
+
+            <div class="contacts-footer__rights">Все права защищены</div>
+            <div class="contacts-footer__chel"></div>
+        </div>
+    </div>
+</footer>
+
+
+
+  <script src="assets/js/main.js"></script>
+
+</body>
+</html>
