--- a/source/html/main.html
+++ b/source/html/main.html
@@ -15,7 +15,7 @@
           <div class="hero__slide hero__slide--1">
             <div class="container">
 
-              <h1 class="hero__title">Кабельная и электротехническая продукция</h1>
+              <h1 class="hero__title">Электротехническая продукция</h1>
               <p class="hero__descr">Наши специалисты помогут выбрать идеальное решение для освещения вашего помещения, а также подскажут как обновить проводку.</p>
 
             </div>
@@ -26,7 +26,7 @@
           <div class="hero__slide hero__slide--2">
             <div class="container">
 
-              <h1 class="hero__title">Крепеж, аксессуары и строительные материалы</h1>
+              <h1 class="hero__title">Рулонная гидроизоляция</h1>
               <p class="hero__descr">Наши специалисты помогут выбрать идеальное решение для освещения вашего помещения, а также подскажут как обновить проводку.</p>
 
             </div>
@@ -36,7 +36,7 @@
           <div class="hero__slide hero__slide--3">
             <div class="container">
 
-              <h1 class="hero__title">Профессиональное оборудование и инструменты</h1>
+              <h1 class="hero__title">Строительные смеси</h1>
               <p class="hero__descr">Наши специалисты помогут выбрать идеальное решение для освещения вашего помещения, а также подскажут как обновить проводку.</p>
 
 
@@ -44,15 +44,12 @@
 
           </div>
 
-
-
         </div>
     </div>
   </section>
 
 
 
-  @include('components/numbers.html')
 
 </main>
 
