--- a/dev/main.html
+++ b/dev/main.html
@@ -22,20 +22,30 @@
                     <a class="header__image" href="main.html">
                         <img src="assets/img/logo.png" alt="">
                     </a>
+
+                    <div class="hamburger-wrapper">
+                        <button class="hamburger hamburger--collapse" type="button">
+                          <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                          </span>
+                        </button>
+                    </div>
     
                     <div class="header__numbers">
-                        <a class="header__numbers-link" href="tel:+375000000000" class="header__numb">+375000000000</a>
-                        <a class="header__numbers-link" href="tel:+375000000000" class="header__numb">+375000000000</a>
+                        <a class="header__numbers-link" href="tel:+375000000000">+375000000000</a>
+                        <a class="header__numbers-link" href="tel:+375000000000">+375000000000</a>
                     </div>
                     <div class="header__search">
                         <input type="search" placeholder="Поиск">
                     </div>
+
                 </div>
-                <div class="header__hidden" id="hidden-menu">
+                <div class="header__hidden" >
                     <ul class="header__nav">
                         <li class="header__nav-item catalog">
                             <a href="#" class="header__nav-link">Каталог</a>
                         </li>
+
                         <li class="header__nav-item">
                             <a href="#" class="header__nav-link">Статьи</a>
                         </li>
