--- a/source/html/article.html
+++ b/source/html/article.html
@@ -6,8 +6,45 @@
 
 <main class="main">
 
+    <section class="hero2 hero--scroll">
+        <div class="container">
+            <div class="breadcrumbs">
+                <nav class="breadcrumbs__list">
+                    <a class="breadcrumbs__link breadcrumbs__link--main" href="main.html">Главная</a>
+                    <a class="breadcrumbs__link" href="blog.html">Статьи</a>
+                    <a class="breadcrumbs__link" href="#">1Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
 
+                </nav>
+            </div>
+        </div>
 
+    </section>
+
+    <section class="article">
+        <div class="container">
+
+            <div class="article__image">
+                <img src="assets/img/article/02.jpg" alt="image">
+            </div>
+            <div class="article__header">
+                <h1 class="article__title">1Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p class="article__date">23.04.2021</p>
+            </div>
+            <div class="article__content">
+                <h2 class="article__cnt-title">What is Lorem Ipsum?</h2>
+                <p class="article__cnt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div class="article__image article__image--several">
+                    <img src="assets/img/article/02.jpg" alt="image">
+                    <img src="assets/img/article/02.jpg" alt="image">
+
+                </div>
+                <h2 class="article__cnt-title">What is Lorem Ipsum?</h2>
+                <p class="article__cnt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </div>
+
+        </div>
+
+    </section>
 
 
 </main>
