--- a/source/html/blog.html
+++ b/source/html/blog.html
@@ -6,6 +6,100 @@
 
 <main class="main">
 
+    <section class="hero2 hero--scroll">
+        <div class="container">
+            <div class="breadcrumbs">
+                <nav class="breadcrumbs__list">
+                    <a class="breadcrumbs__link breadcrumbs__link--main" href="main.html">Главная</a>
+                    <a class="breadcrumbs__link" href="blog.html">Статьи</a>
+
+                </nav>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="blog">
+        <div class="container">
+            <h2>Статьи</h2>
+            <div class="blog__cards">
+                <div class="blog__cards-inner">
+                    <div class="blog__card">
+                        <div class="blog__card-inner">
+                            <div class="blog__card-content">
+                                <h3 class="blog__card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                                <p class="blog__card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam dignissimos obcaecati atque a maiores esse earum dolorem modi non commodi accusantium officia, voluptate consectetur natus. Magnam aliquam accusantium aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus asperiores placeat sequi necessitatibus, expedita voluptatibus earum facilis aliquid nulla amet minima eaque tempore rerum tempora. Maiores unde quia saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eius obcaecati excepturi porro, blanditiis, molestiae similique tenetur corporis expedita accusantium, amet repellendus. Accusamus error harum esse sit laudantium, soluta voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, enim ducimus! Hic, voluptatibus, ab itaque voluptas dolorum beatae ratione accusamus delectus corrupti, laudantium debitis doloribus officiis rerum. Dicta, sint illo!</p>
+                                <a class="blog__card-link" href="article.html">Читать далее</a>
+                            </div>
+                            <div class="blog__card-image">
+                                <img src="assets/img/article/01.jpg" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-inner">
+                            <div class="blog__card-content">
+                                <h3 class="blog__card-title">1Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                                <p class="blog__card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam dignissimos obcaecati atque a maiores esse earum dolorem modi non commodi accusantium officia, voluptate consectetur natus. Magnam aliquam accusantium aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus asperiores placeat sequi necessitatibus, expedita voluptatibus earum facilis aliquid nulla amet minima eaque tempore rerum tempora. Maiores unde quia saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eius obcaecati excepturi porro, blanditiis, molestiae similique tenetur corporis expedita accusantium, amet repellendus. Accusamus error harum esse sit laudantium, soluta voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, enim ducimus! Hic, voluptatibus, ab itaque voluptas dolorum beatae ratione accusamus delectus corrupti, laudantium debitis doloribus officiis rerum. Dicta, sint illo!</p>
+                                <a class="blog__card-link" href="article.html">Читать далее</a>
+                            </div>
+                            <div class="blog__card-image">
+                                <img src="assets/img/article/01.jpg" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-inner">
+                            <div class="blog__card-content">
+                                <h3 class="blog__card-title">2Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                                <p class="blog__card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam dignissimos obcaecati atque a maiores esse earum dolorem modi non commodi accusantium officia, voluptate consectetur natus. Magnam aliquam accusantium aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus asperiores placeat sequi necessitatibus, expedita voluptatibus earum facilis aliquid nulla amet minima eaque tempore rerum tempora. Maiores unde quia saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eius obcaecati excepturi porro, blanditiis, molestiae similique tenetur corporis expedita accusantium, amet repellendus. Accusamus error harum esse sit laudantium, soluta voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, enim ducimus! Hic, voluptatibus, ab itaque voluptas dolorum beatae ratione accusamus delectus corrupti, laudantium debitis doloribus officiis rerum. Dicta, sint illo!</p>
+                                <a class="blog__card-link" href="#">Читать далее</a>
+                            </div>
+                            <div class="blog__card-image">
+                                <img src="assets/img/article/01.jpg" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-inner">
+                            <div class="blog__card-content">
+                                <h3 class="blog__card-title">3Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                                <p class="blog__card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam dignissimos obcaecati atque a maiores esse earum dolorem modi non commodi accusantium officia, voluptate consectetur natus. Magnam aliquam accusantium aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus asperiores placeat sequi necessitatibus, expedita voluptatibus earum facilis aliquid nulla amet minima eaque tempore rerum tempora. Maiores unde quia saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eius obcaecati excepturi porro, blanditiis, molestiae similique tenetur corporis expedita accusantium, amet repellendus. Accusamus error harum esse sit laudantium, soluta voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, enim ducimus! Hic, voluptatibus, ab itaque voluptas dolorum beatae ratione accusamus delectus corrupti, laudantium debitis doloribus officiis rerum. Dicta, sint illo!</p>
+                                <a class="blog__card-link" href="#">Читать далее</a>
+                            </div>
+                            <div class="blog__card-image">
+                                <img src="assets/img/article/01.jpg" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-inner">
+                            <div class="blog__card-content">
+                                <h3 class="blog__card-title">4Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                                <p class="blog__card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam dignissimos obcaecati atque a maiores esse earum dolorem modi non commodi accusantium officia, voluptate consectetur natus. Magnam aliquam accusantium aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus asperiores placeat sequi necessitatibus, expedita voluptatibus earum facilis aliquid nulla amet minima eaque tempore rerum tempora. Maiores unde quia saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eius obcaecati excepturi porro, blanditiis, molestiae similique tenetur corporis expedita accusantium, amet repellendus. Accusamus error harum esse sit laudantium, soluta voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, enim ducimus! Hic, voluptatibus, ab itaque voluptas dolorum beatae ratione accusamus delectus corrupti, laudantium debitis doloribus officiis rerum. Dicta, sint illo!</p>
+                                <a class="blog__card-link" href="#">Читать далее</a>
+                            </div>
+                            <div class="blog__card-image">
+                                <img src="assets/img/article/01.jpg" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-inner">
+                            <div class="blog__card-content">
+                                <h3 class="blog__card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+                                <p class="blog__card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam dignissimos obcaecati atque a maiores esse earum dolorem modi non commodi accusantium officia, voluptate consectetur natus. Magnam aliquam accusantium aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus asperiores placeat sequi necessitatibus, expedita voluptatibus earum facilis aliquid nulla amet minima eaque tempore rerum tempora. Maiores unde quia saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eius obcaecati excepturi porro, blanditiis, molestiae similique tenetur corporis expedita accusantium, amet repellendus. Accusamus error harum esse sit laudantium, soluta voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, enim ducimus! Hic, voluptatibus, ab itaque voluptas dolorum beatae ratione accusamus delectus corrupti, laudantium debitis doloribus officiis rerum. Dicta, sint illo!</p>
+                                <a class="blog__card-link" href="#">Читать далее</a>
+                            </div>
+                            <div class="blog__card-image">
+                                <img src="assets/img/article/01.jpg" alt="image">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </main>
 
