--- a/source/html/main.html
+++ b/source/html/main.html
@@ -6,7 +6,7 @@
 
 <main class="main">
 
-  <section class="hero">
+  <section class="hero hero--scroll">
     
       <div class="hero__inner">
 
@@ -57,7 +57,7 @@
           <ul class="assortment__list">
             <li class="assortment__item assortment__item--active" data-tabs-handler="electrics">Электрика</li>
             <li class="assortment__item" data-tabs-handler="isolation">Рулонная&nbsp;гидроизоляция</li>
-            <li class="assortment__item" data-tabs-handler="mixture">Строительные смеси</li>
+            <li class="assortment__item" data-tabs-handler="mixture">Строительные&nbsp;смеси</li>
             <li class="assortment__item" data-tabs-handler="cement">Цемент-песок</li>
           </ul>
         </div>
