--- a/dev/index.html
+++ b/dev/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Энерго-Блок | Орша</title>
-  <link rel="shortcut icon" href="assets/img/favicons/chel.svg" type="image/svg">
+  <title>ПроводОК</title>
+  <link rel="shortcut icon" href="#" type="image/svg">
   <link rel="stylesheet" href="assets/css/style.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
