--- a/source/html/index.html
+++ b/source/html/index.html
@@ -21,8 +21,12 @@
         <a href="contacts.html">Контакты</a>
       </li>
       <li>
-        <h2>Вакансии</h2>
-        <a href="job.html">Вакансии</a>
+        <h2>Ассортимент</h2>
+        <a href="assortment.html">Ассортимент</a>
+      </li>
+      <li>
+        <h2>О компании</h2>
+        <a href="about.html">О компании</a>
       </li>
 
  
